Testando diferentes tipos de implementação com akka http

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,3 +7,10 @@ http {
   interface = "127.0.0.1"
   port = 9000
 }
+
+db {
+  driver = "org.postgresql.Driver"
+  url = "jdbc:postgresql:world"
+  user = "postgres"
+  password = ""
+}
