Finalizando implementação das requisições

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,7 +10,7 @@ http {
 
 db {
   driver = "org.postgresql.Driver"
-  url = "jdbc:postgresql:world"
-  user = "postgres"
-  password = ""
+  url = "jdbc:postgresql:test"
+  user = "mayhem"
+  password = "mayhem"
 }
